# aoc-2025

./: Cargo.toml  LICENSE  Readme.md
src/: grid.rs  lib.rs
src/day1/: mod.rs
src/day10/: challenge.md  mod.rs
src/day11/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
