[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
color-eyre = "0.6.5"
config = "0.15.19"
eyre = "0.6.12"
itertools = "0.14.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = "0.31.0"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["trace", "timeout"] }
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-error = "0.2.1"
tracing-logfmt = "0.3.5"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
winnow = "0.7.14"
